App header fixes
This fixes several issues the app header was experiencing on mobile and tablet screen sizes;

* The project name was overlapping with the search icon, especially for long names. It will now get dotted out
* The logo was being shown on screens that were really too small for it, causing the header to overflow and more important elements to lack space
* The main menu toggle was being shown on pages that did do not have a main menu
* Some refactoring around the global search input css by making it more bemmy, reducing class specificity
* Improved the design of the search button on mobile, making it more in line with the other buttons

--- a/frontend/src/app/modules/common/header/app-menu.sass
+++ b/frontend/src/app/modules/common/header/app-menu.sass
@@ -3,16 +3,21 @@
   display: flex
   margin: 0
   height: 100%
+  min-width: 0px
 
   &--item
     display: flex
     position: relative
     height: 100%
+    min-width: 0px
 
   &--item-dropdown-indicator
     display: inline-flex
     justify-content: center
     align-items: center
+
+  &--item-title
+    min-width: 0px
 
   &--item-action
     background: transparent 
@@ -27,9 +32,7 @@
     font-size: var(--header-item-font-size)
     text-decoration: none
     padding: 0 15px
-    text-overflow: ellipsis
-    white-space: nowrap
-
+    min-width: 0px
 
     .op-app-menu--item_dropdown-open &,
     &:hover
